{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 239,
  "lineage": "aea01db7-76c5-2151-f56a-69d3fa25b48a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cluster_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:952430311316:instance/i-08604f444abc6be45",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08604f444abc6be45",
            "instance_state": "running",
            "instance_type": "m4.large",
            "ipv6_address_count": 0,
            "key_name": "sterling",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02429f37c0c620f0f",
            "private_dns": "ip-10-10-1-167.ec2.internal",
            "private_ip": "10.10.1.167",
            "public_dns": "ec2-3-87-40-96.compute-1.amazonaws.com",
            "public_ip": "3.87.40.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08366042ec19e5299",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-004f8dc6e087d51a0",
            "tags": {
              "Name": "cluster_master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a502334c3f6146ec"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public-subnet",
            "aws_vpc.cnc_attack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "indexer",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:952430311316:instance/i-0aa6f1ab9bd82bcf2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa6f1ab9bd82bcf2",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "sterling",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04425b3c74e33c2bd",
            "private_dns": "ip-10-10-1-83.ec2.internal",
            "private_ip": "10.10.1.83",
            "public_dns": "ec2-3-89-187-87.compute-1.amazonaws.com",
            "public_ip": "3.89.187.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e980ea58446d7528",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-004f8dc6e087d51a0",
            "tags": {
              "Name": "Indexer-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a502334c3f6146ec"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public-subnet",
            "aws_vpc.cnc_attack"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:952430311316:instance/i-03ff796e2204764cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ff796e2204764cf",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "sterling",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-008eea6456318315b",
            "private_dns": "ip-10-10-1-253.ec2.internal",
            "private_ip": "10.10.1.253",
            "public_dns": "ec2-54-87-185-99.compute-1.amazonaws.com",
            "public_ip": "54.87.185.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08db44cd944d989a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-004f8dc6e087d51a0",
            "tags": {
              "Name": "Indexer-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a502334c3f6146ec"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public-subnet",
            "aws_vpc.cnc_attack"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:952430311316:instance/i-0ac131fcf1db84d7c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac131fcf1db84d7c",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "sterling",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-089ecaac255e2d321",
            "private_dns": "ip-10-10-1-118.ec2.internal",
            "private_ip": "10.10.1.118",
            "public_dns": "ec2-18-233-9-217.compute-1.amazonaws.com",
            "public_ip": "18.233.9.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a1567e457e34451b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-004f8dc6e087d51a0",
            "tags": {
              "Name": "Indexer-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a502334c3f6146ec"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public-subnet",
            "aws_vpc.cnc_attack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "search_head",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:952430311316:instance/i-03a007e1e0c7327e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a007e1e0c7327e3",
            "instance_state": "running",
            "instance_type": "m4.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "sterling",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05104837664ac4c55",
            "private_dns": "ip-10-10-1-189.ec2.internal",
            "private_ip": "10.10.1.189",
            "public_dns": "ec2-18-233-164-237.compute-1.amazonaws.com",
            "public_ip": "18.233.164.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a165c87302a5cafd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-004f8dc6e087d51a0",
            "tags": {
              "Name": "search_head"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a502334c3f6146ec"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public-subnet",
            "aws_vpc.cnc_attack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d01214ff9545eb6d",
            "owner_id": "952430311316",
            "tags": {
              "Name": "cnc igw"
            },
            "vpc_id": "vpc-0af1f074f55e8ce10"
          },
          "dependencies": [
            "aws_vpc.cnc_attack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04414d335922d16a8",
            "owner_id": "952430311316",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d01214ff9545eb6d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT for public subnet"
            },
            "vpc_id": "vpc-0af1f074f55e8ce10"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.cnc_attack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075d4d69861c4556b",
            "route_table_id": "rtb-04414d335922d16a8",
            "subnet_id": "subnet-004f8dc6e087d51a0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.cnc_attack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952430311316:security-group/sg-0a502334c3f6146ec",
            "description": "Allow incoming http, https, icmp \u0026 ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a502334c3f6146ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cnc attack public SG",
            "name_prefix": null,
            "owner_id": "952430311316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public subnet SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af1f074f55e8ce10"
          },
          "dependencies": [
            "aws_vpc.cnc_attack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952430311316:subnet/subnet-004f8dc6e087d51a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-004f8dc6e087d51a0",
            "map_public_ip_on_launch": false,
            "owner_id": "952430311316",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0af1f074f55e8ce10"
          },
          "dependencies": [
            "aws_vpc.cnc_attack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cnc_attack",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952430311316:vpc/vpc-0af1f074f55e8ce10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02cf56a8ea167b5f9",
            "default_route_table_id": "rtb-0b744316c2e165fec",
            "default_security_group_id": "sg-04eb33b47560e5860",
            "dhcp_options_id": "dopt-31c26e4b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0af1f074f55e8ce10",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b744316c2e165fec",
            "owner_id": "952430311316",
            "tags": {
              "Name": "cnc-attack-vpc"
            }
          }
        }
      ]
    }
  ]
}